docs/7.52/md/abencds_annotations_frmwrk.md
---
title: "ABAP CDS - Framework-Specific Annotations"
description: |
  Framework-specific annotations are SAP annotations(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensap_annotation_glosry.htm 'Glossary Entry') that define the technical and semantic properties of CDS objects that are required by specific software components, such as ODATA, UI, and A
version: "7.52"
category: "cds"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_annotations_frmwrk.htm"
abapFile: "abencds_annotations_frmwrk.htm"
keywords: ["do", "if", "try", "data", "abencds", "annotations", "frmwrk"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Dictionary](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_dictionary.htm) →  [ABAP CDS in ABAP Dictionary](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds.htm) →  [ABAP CDS - Annotations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_annotations.htm) →  [ABAP CDS - SAP Annotations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_annotations_sap.htm) → 

ABAP CDS - Framework-Specific Annotations

Framework-specific annotations are [SAP annotations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensap_annotation_glosry.htm "Glossary Entry") that define the technical and semantic properties of CDS objects that are required by specific software components, such as ODATA, UI, and Analytics. The following sections show the associated [annotation definitions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_anno_definition_glosry.htm "Glossary Entry") and the [annotation syntax](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_annotation_syntax_glosry.htm "Glossary Entry"):

-   [Framework-specific annotation definitions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_annotations_frmwrk_ddla.htm)

-   [Framework-specific annotation syntax](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_annotations_frmwrk_tables.htm)

The documentation CDS Annotations describes the meaning of framework-specific annotations, which SAP framework is evaluated by these annotations, and their permitted values.

Note

When using the framework-specific annotations, please note the corresponding established rules. Otherwise error messages can occur during framework-specific checks.

Continue
[ABAP CDS - Framework-Specific Annotation Definitions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_annotations_frmwrk_ddla.htm)
[ABAP CDS - Framework-Specific Annotation Syntax](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_annotations_frmwrk_tables.htm)